[gd_scene load_steps=7 format=3 uid="uid://cs4n42634dlqe"]

[ext_resource type="Script" path="res://Scripts/GUI.gd" id="1_1tx4h"]
[ext_resource type="Texture2D" uid="uid://c3q3suwv8wv8r" path="res://Assets/Inhouse/Thumbnails/bullet.png" id="2_nhvwv"]
[ext_resource type="Texture2D" uid="uid://ow6xjyffd3no" path="res://Assets/Inhouse/Thumbnails/healing_kit.png" id="3_asma1"]
[ext_resource type="Texture2D" uid="uid://c308iknbqb4xj" path="res://Assets/Inhouse/Thumbnails/debris.png" id="4_mvw2u"]
[ext_resource type="Texture2D" uid="uid://bm3jkgfkelv6q" path="res://Assets/Inhouse/Thumbnails/clipart-head-zombie.png" id="5_ysnm8"]
[ext_resource type="PackedScene" uid="uid://cagldwaf5y4dw" path="res://Scenes/stat_box.tscn" id="6_pykan"]

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_1tx4h")

[node name="GUI_Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ResourceGUI" type="MarginContainer" parent="GUI_Control"]
layout_mode = 0
offset_right = 1520.0
offset_bottom = 1080.0
mouse_filter = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="GUI_Control/ResourceGUI"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GUI_Control/ResourceGUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 2

[node name="Bullets" type="HBoxContainer" parent="GUI_Control/ResourceGUI/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
mouse_filter = 2

[node name="Picture" type="TextureRect" parent="GUI_Control/ResourceGUI/VBoxContainer/HBoxContainer/Bullets"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_nhvwv")
expand_mode = 3

[node name="Text" type="RichTextLabel" parent="GUI_Control/ResourceGUI/VBoxContainer/HBoxContainer/Bullets"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
text = "100
"

[node name="HealingKits" type="HBoxContainer" parent="GUI_Control/ResourceGUI/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
mouse_filter = 2

[node name="Picture" type="TextureRect" parent="GUI_Control/ResourceGUI/VBoxContainer/HBoxContainer/HealingKits"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_asma1")
expand_mode = 3

[node name="Text" type="RichTextLabel" parent="GUI_Control/ResourceGUI/VBoxContainer/HBoxContainer/HealingKits"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
text = "50
"

[node name="Debris" type="HBoxContainer" parent="GUI_Control/ResourceGUI/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
mouse_filter = 2

[node name="Picture" type="TextureRect" parent="GUI_Control/ResourceGUI/VBoxContainer/HBoxContainer/Debris"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("4_mvw2u")
expand_mode = 3

[node name="Text" type="RichTextLabel" parent="GUI_Control/ResourceGUI/VBoxContainer/HBoxContainer/Debris"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
text = "25"

[node name="ZombieKills" type="HBoxContainer" parent="GUI_Control/ResourceGUI/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
mouse_filter = 2

[node name="Picture" type="TextureRect" parent="GUI_Control/ResourceGUI/VBoxContainer/HBoxContainer/ZombieKills"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_ysnm8")
expand_mode = 3

[node name="Text" type="RichTextLabel" parent="GUI_Control/ResourceGUI/VBoxContainer/HBoxContainer/ZombieKills"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
text = "100
"

[node name="Soldier_Control" type="MarginContainer" parent="GUI_Control"]
layout_mode = 0
offset_left = 1520.0
offset_top = -1.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="PanelContainer" type="PanelContainer" parent="GUI_Control/Soldier_Control"]
layout_mode = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="GUI_Control/Soldier_Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="GUI_Control/Soldier_Control/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Health" type="Label" parent="GUI_Control/Soldier_Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "4/4
"
horizontal_alignment = 1

[node name="Toughness" parent="GUI_Control/Soldier_Control/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("6_pykan")]
layout_mode = 2
title = "Toughness"

[node name="Damage" parent="GUI_Control/Soldier_Control/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("6_pykan")]
layout_mode = 2
title = "Damage"

[node name="Speed" parent="GUI_Control/Soldier_Control/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("6_pykan")]
layout_mode = 2
title = "Speed"

[node name="Scrounge" parent="GUI_Control/Soldier_Control/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("6_pykan")]
layout_mode = 2
title = "Scrounge"
